# lmg-test

./: .gitignore  CLAUDE.md  README.md  environment.py  pyproject.toml  report.bat  report.sh  show_installed.py
features/: Linda_forgot_psw.feature  Linda_login_page.feature  Linda_my_device.feature  TaPi_login_page.feature  ab_login_page.feature  am-create_account.feature  am-forgot_password.feature  am_LoginFeatureTests.feature  am_LogoutFeatureTests.feature  am_PasswordReset.feature  am_RegistrationFeatureTests.feature  am_SessionPersistenceRememberMe.feature  am_claude_account_deletion.feature  am_claude_account_security.feature  am_claude_email_verification.feature  am_claude_forgot_password.feature  am_claude_login.feature  am_claude_logout.feature  am_claude_profile_management.feature  am_claude_registration.feature  am_create_account.feature  am_devices_page.feature  am_forgot_password.feature  am_login.feature  am_notes.md  am_pages.feature  am_password_reset_tests.feature  am_registration.feature  am_registration_tests.feature  am_sign_in_tests.feature  anKr_login_page.feature  ank_create_account.feature  ank_devices_page.feature  ank_login_page.feature  ank_maps.feature  ant_devices.feature  ant_login_page.feature  devices.feature  kd_devices.feature  kd_login_page.feature  (+5 more)
pages/: Linda_base_page.py  Linda_login_page.py  TaPi_create_account.page.py  TaPi_devices_page.py  TaPi_login_page.py  TaPi_restore_password_page.py  add_device_modal.py  am_base_page.py  am_create_account_page.py  am_devices_page.py  am_devices_settings_page.py  am_google_map_page.py  (+35 more)
(+26 files in other folders)
