[tool.poetry]
name = "playwright-behave-test"
version = "0.1.0"
description = "Simple test framework using Python, Behave, and Playwright"
authors = ["Test Author"]
readme = "README.md"
package-mode = false   # 🔹 добавлено, чтобы Poetry не искал папку с пакетом

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.55.0"
behave = "^1.3.2"
pytest = "^8.4.1"
pytest-playwright = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
